@@ -12,7 +12,6 @@ import java.util.Map;
 import java.util.TreeMap;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
 
@@ -29,11 +28,20 @@ import org.junit.jupiter.api.Test;
  * <p>Scope is deliberately narrow: version-number uniqueness only. It does NOT check seed-data ID
  * collisions (duplicate mill/cost-item PKs across schedules) — those are a separate concern tracked
  * in {@code src/test/resources/db/README.md}.
+ *
+ * <p>Its sibling {@link FlywayMigrationConventionTest} covers the rest of the fixture conventions:
+ * that a new {@code V__} carries no seed rows, that every {@code R__} has a two-digit ordering
+ * prefix, that the grandfathering manifest has not rotted, and that every {@code .sql} here is
+ * classifiable. Look there before concluding a rule is unenforced.
  */
 class FlywayMigrationVersionUniquenessTest {
 
-  // Versioned Flyway scripts: V<version>__<description>.sql (version may be dotted, e.g. V1.1).
-  private static final Pattern VERSIONED = Pattern.compile("^V(\\d+(?:\\.\\d+)*)__.*\\.sql$");
+  // Versioned Flyway scripts: V<version>__<description>.sql. Flyway accepts BOTH a dot and an
+  // underscore between version parts, so V1.1__x.sql and V1_1__x.sql are the SAME version 1.1 —
+  // which is precisely the collision this test exists to catch. Matching only the dotted form made
+  // that pair invisible here (found by the 2026-08-27 review of #367); the version is normalised
+  // below so the two spellings compare equal.
+  private static final Pattern VERSIONED = Pattern.compile("^V(\\d+(?:[._]\\d+)*)__.*\\.sql$");
 
   private static final Path MIGRATION_DIR = Paths.get("src", "test", "resources", "db");
 
@@ -43,17 +51,20 @@ class FlywayMigrationVersionUniquenessTest {
         Files.isDirectory(MIGRATION_DIR),
         () -> "migration directory " + MIGRATION_DIR.toAbsolutePath() + " should exist");
 
+    // Files.walk, not Files.list: Flyway scans a location recursively, so db/<sub>/V9__x.sql is
+    // applied at IT boot and must be counted here too.
     Map<String, List<String>> filesByVersion = new TreeMap<>();
-    try (Stream<Path> entries = Files.list(MIGRATION_DIR)) {
+    try (Stream<Path> entries = Files.walk(MIGRATION_DIR)) {
       entries
-          .map(path -> path.getFileName().toString())
+          .filter(Files::isRegularFile)
           .forEach(
-              name -> {
+              path -> {
+                String name = path.getFileName().toString();
                 Matcher matcher = VERSIONED.matcher(name);
                 if (matcher.matches()) {
                   filesByVersion
-                      .computeIfAbsent(matcher.group(1), key -> new ArrayList<>())
-                      .add(name);
+                      .computeIfAbsent(matcher.group(1).replace('_', '.'), key -> new ArrayList<>())
+                      .add(MIGRATION_DIR.relativize(path).toString().replace('\\', '/'));
                 }
               });
     }
@@ -62,7 +73,7 @@ class FlywayMigrationVersionUniquenessTest {
         filesByVersion.entrySet().stream()
             .filter(entry -> entry.getValue().size() > 1)
             .map(entry -> "  V" + entry.getKey() + " -> " + entry.getValue())
-            .collect(Collectors.toList());
+            .toList();
 
     assertTrue(
         collisions.isEmpty(),
